fix .features gap

--- a/style/style.scss
+++ b/style/style.scss
@@ -480,6 +480,7 @@ pre {
     &__image-wrapper {
       width: 66%;
       padding-top: 6px;
+      gap: 30px;
     }
 
     &__image-1,
